version/0.30/_sources/api/solver/_autosummary/settings/wet_steam_settings.rst.txt
:orphan:

.. _wet_steam_settings:

wet_steam_settings
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.wet_steam_settings
    :show-inheritance:

.. rubric:: Attributes

==========================================================   =============================================================================================================================

Attribute                                                                                                                                                                          Summary

==========================================================   =============================================================================================================================
:ref:`max_liquid_mass_fraction <max_liquid_mass_fraction>`                                            The maximum limit on the condensed liquid-phase mass-fraction to prevent divergence.

:ref:`virial_equation_of_state <virial_equation_of_state>`                 The formulation of the virial equation of state and associated equations for thermodynamic properties of steam.

:ref:`droplet_growth_rate <droplet_growth_rate>`                                                                 The formula to model the droplet growth rate and set modeling parameters.

:ref:`stagnation_conditions <stagnation_conditions>`             If the gas phase is selected, zero wetness is assumed when evaluating total or static values of pressure and temperature.

==========================================================   =============================================================================================================================

.. rubric:: Included in:

==============================   =====================

Parent                                         Summary

==============================   =====================
:ref:`multiphase <multiphase>`       Multiphase model.

==============================   =====================

